--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -570,29 +570,29 @@ section {
           background: #E31B6D;
           color: #fff; }
         section:nth-of-type(3) #gallery .mix:nth-child(1) .card {
-          background: url("img/thumb-1.jpg") center center/cover; }
+          background: url("img/thumb-1.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(2) .card {
-          background: url("img/thumb-2.jpg") center center/cover; }
+          background: url("img/thumb-2.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
-          background: url("img/thumb-3.jpg") center center/cover; }
+          background: url("img/thumb-3.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
-          background: url("img/thumb-4.jpg") center center/cover; }
+          background: url("img/thumb-4.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
-          background: url("img/thumb-5.jpg") center center/cover; }
+          background: url("img/thumb-5.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
-          background: url("img/thumb-6.jpg") center center/cover; }
+          background: url("img/thumb-6.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(7) .card {
-          background: url("../img/thumb-7.jpg") center center/cover; }
+          background: url("../img/thumb-7.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(8) .card {
-          background: url("../img/thumb-8.jpg") center center/cover; }
+          background: url("../img/thumb-8.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(9) .card {
-          background: url("../img/thumb-9.jpg") center center/cover; }
+          background: url("../img/thumb-9.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(10) .card {
-          background: url("../img/thumb-10.jpg") center center/cover; }
+          background: url("../img/thumb-10.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(11) .card {
-          background: url("../img/thumb-11.jpg") center center/cover; }
+          background: url("../img/thumb-11.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix:nth-child(12) .card {
-          background: url("../img/thumb-12.jpg") center center/cover; }
+          background: url("../img/thumb-12.png") center center/cover; }
         section:nth-of-type(3) #gallery .mix .card {
           height: 240px;
           max-width: 100%;
@@ -626,13 +626,13 @@ section {
       width: 100%;
       cursor: pointer; }
       section:nth-of-type(4) .blog-wrap #thumb-1 {
-        background: url("img/blog-1.jpg") center center/cover; }
+        background: url("img/blog-1.png") center center/cover; }
       section:nth-of-type(4) .blog-wrap #thumb-2 {
-        background: url("img/blog-2.jpg") center center/cover; }
+        background: url("img/blog-2.png") center center/cover; }
       section:nth-of-type(4) .blog-wrap #thumb-3 {
-        background: url("img/blog-3.jpg") center center/cover; }
+        background: url("img/blog-3.png") center center/cover; }
       section:nth-of-type(4) .blog-wrap #thumb-4 {
-        background: url("img/blog-4.jpg") center center/cover; }
+        background: url("img/blog-4.png") center center/cover; }
       section:nth-of-type(4) .blog-wrap .fade-wrap {
         transition: opacity .3s; }
       section:nth-of-type(4) .blog-wrap.fade .fade-wrap {
